<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="logout">Logout</string>
    <string name="delete">delete</string>
    <string name="modify">Modify</string>
    <string name="save">save</string>
    <string name="price">Price</string>
    <string name="food">Food</string>
    <string name="get_menu">Get menu</string>
    <string name="delete_button">delete button</string>
    <string name="Ufood">Food</string>
    <string name="update">Update</string>
    <string name="customer_click_here_to_view_the_menu">Customer? Click here to View the menu</string>
    <string name="menu">Menu</string>
    <string name="cfood">CFood</string>
    <string name="cprice">CPrice</string>
    <string name="stopmusic">StopMusic</string>
    <string name="startmusic">StartMusic</string>
</resources>